zerocopy-derive/tests/ui-stable/enum.stderr
error: unrecognized representation hint
  --> tests/ui-stable/enum.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> tests/ui-stable/enum.rs:21:8
   |
21 | #[repr(foo)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on an enum
  --> tests/ui-stable/enum.rs:27:8
   |
27 | #[repr(transparent)]
   |        ^^^^^^^^^^^

error: conflicting representation hints
  --> tests/ui-stable/enum.rs:33:1
   |
33 | #[repr(u8, u16)]
   | ^

error: must have a non-align #[repr(...)] attribute in order to guarantee this type's memory layout
  --> tests/ui-stable/enum.rs:38:22
   |
38 | #[derive(FromZeroes, FromBytes)]
   |                      ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only C-like enums can implement FromZeroes
  --> tests/ui-stable/enum.rs:48:1
   |
48 | / enum FromZeroes1 {
49 | |     A(u8),
50 | | }
   | |_^

error: only C-like enums can implement FromZeroes
  --> tests/ui-stable/enum.rs:53:1
   |
53 | / enum FromZeroes2 {
54 | |     A,
55 | |     B(u8),
56 | | }
   | |_^

error: FromZeroes only supported on enums with a variant that has a discriminant of `0`
  --> tests/ui-stable/enum.rs:59:1
   |
59 | / enum FromZeroes3 {
60 | |     A = 1,
61 | |     B,
62 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:69:8
   |
69 | #[repr(C)]
   |        ^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:75:8
   |
75 | #[repr(usize)]
   |        ^^^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:81:8
   |
81 | #[repr(isize)]
   |        ^^^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:87:8
   |
87 | #[repr(u32)]
   |        ^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:93:8
   |
93 | #[repr(i32)]
   |        ^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:99:8
   |
99 | #[repr(u64)]
   |        ^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> tests/ui-stable/enum.rs:105:8
    |
105 | #[repr(i64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:115:8
    |
115 | #[repr(C)]
    |        ^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:121:8
    |
121 | #[repr(u16)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:127:8
    |
127 | #[repr(i16)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:133:8
    |
133 | #[repr(u32)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:139:8
    |
139 | #[repr(i32)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:145:8
    |
145 | #[repr(u64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:151:8
    |
151 | #[repr(i64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:157:8
    |
157 | #[repr(usize)]
    |        ^^^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:163:8
    |
163 | #[repr(isize)]
    |        ^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:169:12
    |
169 | #[repr(u8, align(2))]
    |            ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:175:12
    |
175 | #[repr(i8, align(2))]
    |            ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:181:18
    |
181 | #[repr(align(1), align(2))]
    |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:187:8
    |
187 | #[repr(align(2), align(4))]
    |        ^^^^^^^^

error[E0565]: meta item in `repr` must be an identifier
  --> tests/ui-stable/enum.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> tests/ui-stable/enum.rs:21:8
   |
21 | #[repr(foo)]
   |        ^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0566]: conflicting representation hints
  --> tests/ui-stable/enum.rs:33:8
   |
33 | #[repr(u8, u16)]
   |        ^^  ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` on by default
